[project]
name = "repl-nix-new-repl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "django>=5.1.4",
    "pypdf2==1.26.0",
    "reportlab>=4.2.5",
    "flask-cors>=5.0.0",
]
